--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,21 +5,16 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - $(aws ecr get-login --region eu-central-1 --no-include-email)
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker build -t 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:latest .
+      - docker tag 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:latest 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:${echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7:=latest}
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-artifacts:
-    files: imagedefinitions.json
+      - docker push 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:latest
+      - docker push 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:${echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7:=latest}
