--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,26 @@
 version: 0.2
 
+env:
+  variables:
+    REPOSITORY_URI: "028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla"
+    REGION: "eu-central-1"
+    TAG: "1"
+
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region eu-central-1 --no-include-email)
+      - $(aws ecr get-login --region $REGION --no-include-email)
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:latest .
-      - docker tag 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:latest 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:${echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7:=latest}
+      - docker build -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$TAG
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:latest
-      - docker push 028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla:${echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7:=latest}
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$TAG
