--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region $REGION --no-include-email)
+      - eval $(aws ecr get-login --no-include-email | sed 's|https://||')
   build:
     commands:
       - echo Build started on `date`
