--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,25 +1,24 @@
 version: 0.2
 
-env:
-  variables:
-    REPOSITORY_URI: "028339193837.dkr.ecr.eu-west-1.amazonaws.com/ndla"
-    REGION: "eu-central-1"
-    TAG: "1"
-
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --no-include-email --region eu-central-1)
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - REPOSITORY_URI=028339193837.dkr.ecr.eu-central-1.amazonaws.com/ndla
+      - REPOSITORY_NAME=ndla
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t ndla .
-      - docker tag ndla:latest 028339193837.dkr.ecr.eu-central-1.amazonaws.com/ndla:latest
+      - docker build -t $REPOSITORY_NAME .
+      - docker tag $REPOSITORY_NAME:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push 028339193837.dkr.ecr.eu-central-1.amazonaws.com/ndla:latest
+      - docker push $REPOSITORY_NAME:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
