--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,3 +22,6 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_NAME:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - printf '[{"name":"ndla-api","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+artifacts:
+    files: imagedefinitions.json
