--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,10 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=028339193837.dkr.ecr.eu-central-1.amazonaws.com/ndla
+      - REGION=eu-central-1
+      - $(aws ecr get-login --region $REGION --no-include-email)
       - REPOSITORY_NAME=ndla
+      - REPOSITORY_URI=028339193837.dkr.ecr.$REGION.amazonaws.com/$REPOSITORY_NAME
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
@@ -20,7 +21,7 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_NAME:latest
+      #- docker push $REPOSITORY_NAME:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - printf '[{"name":"ndla-api","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
