--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,8 +30,8 @@ phases:
       - echo Pushing the Docker images...
       #- docker push $REPOSITORY_NAME:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"ndla-api","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - echo imagedefinitions.json
+      - printf '[{"name":"ndla-api","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
+      - echo imageDefinitions.json
 artifacts:
     files:
     - '**/*'
