--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,7 +31,7 @@ phases:
       #- docker push $REPOSITORY_NAME:latest
       - echo $REPOSITORY_URI:$IMAGE_TAG
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"first-run-task-definition:1","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
+      - printf '[{"name":"ndla_container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
       - echo imageDefinitions.json
 artifacts:
     files:
