--- a/ConceptsMicroservice/ConceptsMicroservice.csproj
+++ b/ConceptsMicroservice/ConceptsMicroservice.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
     <PackageReference Include="NSwag.AspNetCore" Version="11.19.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
