--- a/buildspec_deploy.yml
+++ b/buildspec_deploy.yml
@@ -7,7 +7,7 @@ phases:
       - aws --version
       - REGION=eu-central-1
       - $(aws ecr get-login --region $REGION --no-include-email)
-      - REPOSITORY_NAME=ndla-api
+      - REPOSITORY_NAME=ndla
       - REPOSITORY_URI=028339193837.dkr.ecr.$REGION.amazonaws.com/$REPOSITORY_NAME
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
@@ -28,9 +28,10 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
+      #- docker push $REPOSITORY_NAME:latest
       - echo $REPOSITORY_URI:$IMAGE_TAG
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"%s","imageUri":"%s"}]' $REPOSITORY_NAME $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
+      - printf '[{"name":"ndla_container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
       - echo imageDefinitions.json
 artifacts:
     files:
