Added a failing test

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,37 +1,14 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
     commands:
-      - echo Logging in to Amazon ECR...
-      - aws --version
-      - REGION=eu-central-1
-      - $(aws ecr get-login --region $REGION --no-include-email)
-      - REPOSITORY_NAME=ndla-api
-      - REPOSITORY_URI=028339193837.dkr.ecr.$REGION.amazonaws.com/$REPOSITORY_NAME
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
-      - echo Variables
-      - echo Region $REGION
-      - echo REPOSITORY_NAME $REPOSITORY_NAME
-      - echo REPOSITORY_URI $REPOSITORY_URI
-      - echo COMMIT_HASH $COMMIT_HASH
-      - echo IMAGE_TAG $IMAGE_TAG
-
+      - cd ConceptMicroservice
+      - cd ConceptMicroservie.UnitTests
+      - dotnet restore
   build:
     commands:
-      - echo Build started on `date`
-      - echo Building the Docker image...
-      - docker build -t $REPOSITORY_NAME .
-      - docker tag $REPOSITORY_NAME:latest $REPOSITORY_URI:$IMAGE_TAG
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - echo $REPOSITORY_URI:$IMAGE_TAG
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"%s","imageUri":"%s"}]' $REPOSITORY_NAME $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
-      - echo imageDefinitions.json
+      - dotnet test
 artifacts:
     files:
-    - imageDefinitions.json
+    - **/**
