--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,8 @@ phases:
       - TAG=${COMMIT_HASH:=latest}
       - TEST_FILE=test_result.xml
       - PROJECT_NAME=ConceptMicroservice
-      - echo $PWD
+      - echo PWD
+      - ls -l
       - cd $PROJECT_NAME.UnitTests
       - dotnet restore
   build:
