Removed appsettings dev

--- a/ConceptsMicroservice/appsettings.json
+++ b/ConceptsMicroservice/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConceptsDatabase": "Host=;Database=;Username=;Password=;"
+  }
 }
