ConncetionString is fetched from environment variable

--- a/ConceptsMicroservice/appsettings.json
+++ b/ConceptsMicroservice/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConceptsDatabase": "Host=;Database=;Username=;Password=;"
-  }
+  "AllowedHosts": "*"
 }
