--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,15 +8,10 @@ phases:
       - REGION=eu-central-1
       - $(aws ecr get-login --region $REGION --no-include-email)
       - REPOSITORY_NAME=ndla
+      - PROJECT=ConceptsMicroservice
       - REPOSITORY_URI=028339193837.dkr.ecr.$REGION.amazonaws.com/$REPOSITORY_NAME
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
-      - echo Variables
-      - echo Region $REGION
-      - echo REPOSITORY_NAME $REPOSITORY_NAME
-      - echo REPOSITORY_URI $REPOSITORY_URI
-      - echo COMMIT_HASH $COMMIT_HASH
-      - echo IMAGE_TAG $IMAGE_TAG
 
   build:
     commands:
@@ -28,11 +23,16 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      #- docker push $REPOSITORY_NAME:latest
       - echo $REPOSITORY_URI:$IMAGE_TAG
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - printf '[{"name":"ndla_container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
+      - printf '[{"name":"%s","imageUri":"%s"}]' $REPOSITORY_NAME $REPOSITORY_URI:$IMAGE_TAG > imageDefinitions.json
       - echo imageDefinitions.json
+    finally:
+      - echo Installing dependencies
+      - cd $PROJECT
+      - dotnet restore
+      - echo Update database
+      - dotnet ef database update
 artifacts:
     files:
     - imageDefinitions.json
