Added Category model and Controller

--- a/ConceptsMicroservice/appsettings.json
+++ b/ConceptsMicroservice/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "ConnectionStrings": {
+    "ConceptsDatabase": "Server=localhost; Database=tes1;User ID = test;Password=test;Integrated Security=true; Pooling=true;"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
