Ready for serach on metadata and Concepts title

--- a/ConceptsMicroservice/appsettings.json
+++ b/ConceptsMicroservice/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConceptsDatabase": "Server=localhost; Database=tes1;User ID = test;Password=test;Integrated Security=true; Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
